# VtkQtDemo

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  PointCloud3D.cpp  PointCloud3D.hpp  PointCloud3D.ui  README.md  Widget.cpp  Widget.h  main.cpp  mesh.hpp  widget.ui
data/: point-cloud_0.csv
